- [change] all RX display offsets are now done in one place in the code
- [change] TX-ATT label has been changed to [S-ATT]
- [change] spectrum gradient change. Now -150 to +10 dBm.  NOTE: all gradients will need to be adjusted
- [change] cursor/peak readout colours moved to Appearance-General
- [change] float precision maintained for display/meter calibration offsets
- [fix] mic disable/enable button on front end will now disable the mic at startup if set as off. Note: its state is saved as part of the tx profile
- [fix] fixed rare out of bounds issue in memory ScheduleUpdate
- [fix] cat IF command fix where an error (O;) message would be returned if an unsupported TuneStep was in use. This bug has existed since 25/02/2007
- [fix] mode buttons when in collapsed mode should now work again when Thetis is first launched
- [fix] when running multiple instances of Thetis, closing down others may cause issues with PerformaceCounter/CpuLoad display, resulting in endless error logs. This has been resolved
- [fix] fixed wave record crash if Windows [Controlled folder access] is turned on. You have to add  Thetis.exe  to the [Allow an app through Controlled folder access] list if you want to use the wave record when [Controlled folder access] is turned on
- [fix] the sub-receiver now respects the main receiver’s mute state, fixing an issue where sub-receiver audio could still be heard even when the main receiver was muted
- [fix] serial ports that are not of COMnn format now do not causes errors. If a serial port is for example name COMB13, then it will not be able to be used
- [fix] notch popup window will be shifted so that it is visible when close to the edge of a screen
- [fix] fix filter width crash under certain conditions in the filter config form
- [fix] fix issues where adc overload has caused an rx attenuation to be applied and the band has been changed before the attenuation has been removed
- [fix] serial keying cw will now only mox when in SEMI mode